<resources>
    <string name="app_name">Services App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="facebook_app_id">2231306383598245</string>
    <string name="fb_login_protocol_scheme">fb2231306383598245</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_api_key">116180548122-fis3ap02db29n1jr18fqtr33javtv7sf.apps.googleusercontent.com</string>
    <string name="google_console_web_key">116180548122-fis3ap02db29n1jr18fqtr33javtv7sf.apps.googleusercontent.com</string>
    <string name="google_console_android_key">116180548122-9ra87cgkhqji81c5tf9qshamis4o76pj.apps.googleusercontent.com</string>

</resources>
